# Family-Tree-Generator

./: .gitignore  CMakeLists.txt  Makefile  connection.h  gs.out  helpers.cpp  helpers.h  main.cpp  new_idea.txt  new_new_idea.txt  person.cpp  person.h  prayers.h  scratch.txt  world.cpp  world.h
deprecated/: connection.cpp  person.cpp  person.h  prayers.cpp  prayers.h  world.cpp  world.h
deprecated2/: ultimate_idea.txt
deprecated2/src/: Generations.cpp  Helpers.cpp  Person.cpp  World.h
deprecated2/src/groups/: Family.cpp  Marriage.cpp  Philanthropic.h  Religion.h  Social.cpp  Social.h
prototype/: family_tree.cpp  family_tree.h  gdb.cpp  main.cpp  makefile  name_generator.cpp  name_generator.h  person.cpp  person.h  person_stats.cpp  person_stats.h  random_handler.cpp  random_handler.h  tui.cpp  tui.h
src/: CONTRIBUTING.md  Generation.cpp  Generation.h  Generations.cpp  Generations.h  Helpers.h  Person.cpp  Person.h  README.md  World.cpp  World.h  logger.cpp  logger.h  main.cpp  makefile  person.h  person_stats.cpp  person_stats.h  tui.cpp  tui.h
src/groups/: Family.h  Group.cpp  Group.h  Health.cpp  Health.h  Marriage.cpp  Marriage.h  Philanthropic.cpp  Philanthropic.h  Religion.cpp  Religion.h  Social.h
